changed yml file

--- a/.github/workflows/build-with-cache.yml
+++ b/.github/workflows/build-with-cache.yml
@@ -30,6 +30,6 @@ jobs:
         with:
           context: .
           push: true
-          tags: srinivas1999/cache-test:${{ env.DOCKER_TAG }}
-          cache-from: type=registry,ref=srinivas1999/cache-test:${{ env.DOCKER_TAG }}
-          cache-to: type=inline
+          tags: srinivas1999/cache-test:${{ github.event.pull_request.head.ref }}
+          cache-from: type=registry,ref=srinivas1999/cache-test:${{ github.event.pull_request.head.ref }}
+          cache-to: type=registry,ref=srinivas1999/cache-test:${{ github.event.pull_request.head.ref }},mode=max
