--- a/.github/workflows/build-with-cache.yml
+++ b/.github/workflows/build-with-cache.yml
@@ -15,12 +15,11 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Cache Docker layers
+        id: docker-cache
         uses: actions/cache@v2
         with:
           path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+          key: docker-cache-${{ hashFiles('package-lock.json') }}
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
@@ -32,10 +31,11 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          push: false
+          push: true
           tags: user/app:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
+          ${{ steps.docker-cache.outputs.cache-hit == 'true' && 'cache-from' || 'cache-to' }}: type=local,src=/tmp/.buildx-cache
+          # cache-from: type=local,src=/tmp/.buildx-cache
+          # cache-to: type=local,dest=/tmp/.buildx-cache-new
 
       - name: Move cache
         run: |
