--- a/.github/workflows/build-without-cache.yml
+++ b/.github/workflows/build-without-cache.yml
@@ -26,4 +26,4 @@ jobs:
         with:
           context: .
           push: false
-          tags: user/app:latest
+          tags: srinivas1999/cache-test:latest
