--- a/.github/workflows/build-with-cache.yml
+++ b/.github/workflows/build-with-cache.yml
@@ -29,15 +29,12 @@ jobs:
 
       - name: Build and push
         uses: docker/build-push-action@v2
+        env:
+          cache-type: ${{ steps.docker-cache.outputs.cache-hit == 'true' && 'cache-from' || 'cache-to' }}
+          location-type: ${{ steps.docker-cache.outputs.cache-hit == 'true' && 'src' || 'dest' }}
         with:
           context: .
           push: false
           tags: srinivas1999/cache-test:latest
-          ${{ steps.docker-cache.outputs.cache-hit == 'true' && 'cache-from' || 'cache-to' }}: type=local,${{ steps.docker-cache.outputs.cache-hit == 'true' && 'src' || 'dest' }}=/tmp/.buildx-cache
-          # cache-from: type=local,src=/tmp/.buildx-cache
-          # cache-to: type=local,dest=/tmp/.buildx-cache-new
+          ${{ env.cache-type }}: type=local,${{ env.location-type }}=/tmp/.buildx-cache
 
-      # - name: Move cache
-      #   run: |
-      #     rm -rf /tmp/.buildx-cache
-      #     mv /tmp/.buildx-cache-new /tmp/.buildx-cache
