--- a/.github/workflows/build-with-cache.yml
+++ b/.github/workflows/build-with-cache.yml
@@ -29,12 +29,12 @@ jobs:
 
       - name: Build and push
         uses: docker/build-push-action@v2
-        env:
-          cache-type: ${{ steps.docker-cache.outputs.cache-hit == 'true' && 'cache-from' || 'cache-to' }}
-          location-type: ${{ steps.docker-cache.outputs.cache-hit == 'true' && 'src' || 'dest' }}
+        # env:
+        #   cache-type: ${{ steps.docker-cache.outputs.cache-hit == 'true' && 'cache-from' || 'cache-to' }}
+        #   location-type: ${{ steps.docker-cache.outputs.cache-hit == 'true' && 'src' || 'dest' }}
         with:
           context: .
-          push: true
+          push: false
           tags: srinivas1999/cache-test:latest
-          ${{ env.cache-type }}: type=local,${{ env.location-type }}=/tmp/.buildx-cache
+          # ${{ env.cache-type }}: type=local,${{ env.location-type }}=/tmp/.buildx-cache
 
