--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "chalk": "^4.1.2",
     "d3-scale-chromatic": "^3.0.0",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
