--- a/.github/workflows/build-with-cache.yml
+++ b/.github/workflows/build-with-cache.yml
@@ -14,12 +14,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Cache Docker layers
-        id: docker-cache
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: docker-cache-${{ hashFiles('package-lock.json') }}
+      # - name: Cache Docker layers
+      #   id: docker-cache
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: /tmp/.buildx-cache
+      #     key: docker-cache-${{ hashFiles('package-lock.json') }}
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
@@ -29,13 +29,14 @@ jobs:
 
       - name: Build and push
         uses: docker/build-push-action@v2
-        env:
-          cache-type: ${{ steps.docker-cache.outputs.cache-hit == 'true' && 'cache-from' || 'cache-to' }}
-          location-type: ${{ steps.docker-cache.outputs.cache-hit == 'true' && 'src' || 'dest' }}
-          cache-mode: ${{ steps.docker-cache.outputs.cache-hit == 'true' && ' ' || ',mode=max' }}
+        # env:
+        #   cache-type: ${{ steps.docker-cache.outputs.cache-hit == 'true' && 'cache-from' || 'cache-to' }}
+        #   location-type: ${{ steps.docker-cache.outputs.cache-hit == 'true' && 'src' || 'dest' }}
+        #   cache-mode: ${{ steps.docker-cache.outputs.cache-hit == 'true' && ' ' || ',mode=max' }}
         with:
           context: .
           push: false
           tags: srinivas1999/cache-test:latest
-          ${{ env.cache-type }}: type=local,${{ env.location-type }}=/tmp/.buildx-cache${{ env.cache-mode }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
