--- a/.github/workflows/build-with-cache.yml
+++ b/.github/workflows/build-with-cache.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           context: .
           push: false
-          tags: srinivas1999/cache-test:latest
+          tags: srinivas1999/cache-test:${{ github.event.pull_request.head.ref }}-${{ github.event.pull_request.head.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
