--- a/.github/workflows/build-without-cache.yml
+++ b/.github/workflows/build-without-cache.yml
@@ -8,20 +8,26 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-
       - name: Checkout
         uses: actions/checkout@v2
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
+      # - name: echo some string
+      #   id: affected-projects
+      #   shell: bash
+      #   run: echo "::set-output name=projects::$(echo "My some, long stirng here, it goes")"
+
       - name: Login to DockerHub
+        # if: ${{ contains(steps.affected-projects.outputs.projects, 'long string here') }}
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push
+        # if: ${{ contains(steps.affected-projects.outputs.projects, 'long string here') }}
         uses: docker/build-push-action@v2
         with:
           context: .
