--- a/.github/workflows/build-without-cache.yml
+++ b/.github/workflows/build-without-cache.yml
@@ -5,33 +5,60 @@ on:
     branches: [main]
 
 jobs:
+  preparation:
+    runs-on: ubuntu-latest
+    timeout-minutes: 3
+
+    outputs:
+      affected-projects: ${{ steps.preparation.outputs.affected-projects }}
+
+    steps:
+      - name: Checkout PR
+        uses: actions/checkout@v2
+
+      - name: Preparation
+        id: preparation
+        uses: ./.github/actions/preparation
+
+  lint:
+    runs-on: ubuntu-latest
+    needs: preparation
+
+    steps:
+      - name: Dummy step
+        shell: bash
+        run: echo "Just dummy step"
+
   docker:
     runs-on: ubuntu-latest
+    needs: [preparation, lint]
+    if: ${{ needs.preparation.outputs.affected-projects != null }}
+    strategy:
+      matrix:
+        target: ${{ fromJson(needs.preparation.outputs.affected-projects) }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v1
 
-      # - name: echo some string
-      #   id: affected-projects
-      #   shell: bash
-      #   run: echo "::set-output name=projects::$(echo "My some, long stirng here, it goes")"
+      - name: echo state value
+        shell: bash
+        run: echo ${{ matrix.target }}
 
-      - name: Login to DockerHub
-        # if: ${{ contains(steps.affected-projects.outputs.projects, 'long string here') }}
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # - name: Login to DockerHub
+      #   uses: docker/login-action@v1
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push
-        # if: ${{ contains(steps.affected-projects.outputs.projects, 'long string here') }}
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: false
-          tags: user/app:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
+      # - name: Build and push
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     context: .
+      #     push: false
+      #     tags: user/app:latest
+      #     cache-from: type=local,src=/tmp/.buildx-cache
+      #     cache-to: type=local,dest=/tmp/.buildx-cache-new
