--- a/.github/workflows/build-without-cache.yml
+++ b/.github/workflows/build-without-cache.yml
@@ -19,6 +19,18 @@ jobs:
       - name: Preparation
         id: preparation
         uses: ./.github/actions/preparation
+        with:
+          projects: |
+            {
+              "proj1": "proj1,proj3,proj5",
+              "proj2": "proj10,proj9,proj20",
+              "proj3": "proj21,proj30"
+            }
+
+      - name: Output projects
+        shell: bash
+        run: |
+          echo '${{ steps.preparation.outputs.affected-projects }}'
 
   lint:
     runs-on: ubuntu-latest
@@ -29,13 +41,13 @@ jobs:
         shell: bash
         run: echo "Just dummy step"
 
-  docker:
+  proj1:
     runs-on: ubuntu-latest
     needs: [preparation, lint]
-    if: ${{ needs.preparation.outputs.affected-projects != null }}
+    if: ${{ fromJSON(needs.preparation.outputs.affected-projects).proj1 != null }}
     strategy:
       matrix:
-        target: ${{ fromJson(needs.preparation.outputs.affected-projects) }}
+        target: ${{ fromJSON(needs.preparation.outputs.affected-projects).proj1 }}
 
     steps:
       - name: Checkout
@@ -48,17 +60,54 @@ jobs:
         shell: bash
         run: echo ${{ matrix.target }}
 
-      # - name: Login to DockerHub
-      #   uses: docker/login-action@v1
-      #   with:
-      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+  proj2:
+    runs-on: ubuntu-latest
+    needs: [preparation, lint]
+    if: ${{ fromJSON(needs.preparation.outputs.affected-projects).proj2 != null }}
+    strategy:
+      matrix:
+        target: ${{ fromJSON(needs.preparation.outputs.affected-projects).proj2 }}
 
-      # - name: Build and push
-      #   uses: docker/build-push-action@v2
-      #   with:
-      #     context: .
-      #     push: false
-      #     tags: user/app:latest
-      #     cache-from: type=local,src=/tmp/.buildx-cache
-      #     cache-to: type=local,dest=/tmp/.buildx-cache-new
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v1
+
+      - name: echo state value
+        shell: bash
+        run: echo ${{ matrix.target }}
+
+  proj3:
+    runs-on: ubuntu-latest
+    needs: [preparation, lint]
+    if: ${{ fromJSON(needs.preparation.outputs.affected-projects).proj3 != null }}
+    strategy:
+      matrix:
+        target: ${{ fromJSON(needs.preparation.outputs.affected-projects).proj3 }}
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v1
+
+      - name: echo state value
+        shell: bash
+        run: echo ${{ matrix.target }}
+  # - name: Login to DockerHub
+  #   uses: docker/login-action@v1
+  #   with:
+  #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+  # - name: Build and push
+  #   uses: docker/build-push-action@v2
+  #   with:
+  #     context: .
+  #     push: false
+  #     tags: user/app:latest
+  #     cache-from: type=local,src=/tmp/.buildx-cache
+  #     cache-to: type=local,dest=/tmp/.buildx-cache-new
