--- a/.github/workflows/build-without-cache.yml
+++ b/.github/workflows/build-without-cache.yml
@@ -22,9 +22,13 @@ jobs:
         with:
           projects: |
             {
-              "proj1": "proj1,proj3,proj5",
-              "proj2": "proj10,proj9,proj20",
-              "proj3": "proj21,proj30"
+              "frontendProjects": [{ "projectName": "edgetag-app-ui" },
+                                    { "projectName": "edgetag-website" }, 
+                                    { "projectName": "edgetag-sdk-demo" }],
+              "backendProjects": [{ "projectName": "crm-app-api" }, 
+                                  { "projectName": "edgetag-app-api" }],
+              "dockerProjects": [{ "projectName": "cloud-app-ui" }],
+              "storybookProjects": [{ "projectName": "ui-kit" }]
             }
 
       - name: Output projects
@@ -41,62 +45,62 @@ jobs:
         shell: bash
         run: echo "Just dummy step"
 
-  proj1:
-    runs-on: ubuntu-latest
-    needs: [preparation, lint]
-    if: ${{ fromJSON(needs.preparation.outputs.affected-projects).proj1 != null }}
-    strategy:
-      matrix:
-        target: ${{ fromJSON(needs.preparation.outputs.affected-projects).proj1 }}
+  # proj1:
+  #   runs-on: ubuntu-latest
+  #   needs: [preparation, lint]
+  #   if: ${{ fromJSON(needs.preparation.outputs.affected-projects).proj1 != null }}
+  #   strategy:
+  #     matrix:
+  #       target: ${{ fromJSON(needs.preparation.outputs.affected-projects).proj1 }}
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
 
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v1
+  #     # - name: Set up Docker Buildx
+  #     #   uses: docker/setup-buildx-action@v1
 
-      - name: echo state value
-        shell: bash
-        run: echo ${{ matrix.target }}
+  #     - name: echo state value
+  #       shell: bash
+  #       run: echo ${{ matrix.target }}
 
-  proj2:
-    runs-on: ubuntu-latest
-    needs: [preparation, lint]
-    if: ${{ fromJSON(needs.preparation.outputs.affected-projects).proj2 != null }}
-    strategy:
-      matrix:
-        target: ${{ fromJSON(needs.preparation.outputs.affected-projects).proj2 }}
+  # proj2:
+  #   runs-on: ubuntu-latest
+  #   needs: [preparation, lint]
+  #   if: ${{ fromJSON(needs.preparation.outputs.affected-projects).proj2 != null }}
+  #   strategy:
+  #     matrix:
+  #       target: ${{ fromJSON(needs.preparation.outputs.affected-projects).proj2 }}
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
 
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v1
+  #     # - name: Set up Docker Buildx
+  #     #   uses: docker/setup-buildx-action@v1
 
-      - name: echo state value
-        shell: bash
-        run: echo ${{ matrix.target }}
+  #     - name: echo state value
+  #       shell: bash
+  #       run: echo ${{ matrix.target }}
 
-  proj3:
-    runs-on: ubuntu-latest
-    needs: [preparation, lint]
-    if: ${{ fromJSON(needs.preparation.outputs.affected-projects).proj3 != null }}
-    strategy:
-      matrix:
-        target: ${{ fromJSON(needs.preparation.outputs.affected-projects).proj3 }}
+  # proj3:
+  #   runs-on: ubuntu-latest
+  #   needs: [preparation, lint]
+  #   if: ${{ fromJSON(needs.preparation.outputs.affected-projects).proj3 != null }}
+  #   strategy:
+  #     matrix:
+  #       target: ${{ fromJSON(needs.preparation.outputs.affected-projects).proj3 }}
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
 
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v1
+  #     # - name: Set up Docker Buildx
+  #     #   uses: docker/setup-buildx-action@v1
 
-      - name: echo state value
-        shell: bash
-        run: echo ${{ matrix.target }}
+  #     - name: echo state value
+  #       shell: bash
+  #       run: echo ${{ matrix.target }}
   # - name: Login to DockerHub
   #   uses: docker/login-action@v1
   #   with:
