--- a/.github/actions/preparation/action.yml
+++ b/.github/actions/preparation/action.yml
@@ -39,8 +39,7 @@ runs:
       env:
         buildCommand: ${{ true && 'build' || 'build-storybook' }}
       run: |
-        affectedProjects=$(echo 'proj1, proj2')
-        echo "$buildCommand"
+        affectedProjects=$(echo 'edgetag-website, ui-kit')
 
         echo "::set-output name=affected-projects::$affectedProjects"
 
@@ -50,53 +49,25 @@ runs:
       env:
         PROJECTS: ${{ inputs.projects }}
         AFFECTED_PROJECTS: ${{ steps.affected.outputs.affected-projects }}
-        buildCommand: ${{ 1 && 'build' || 'build-storybook' }}
       with:
         script: |
-          const { PROJECTS, AFFECTED_PROJECTS, buildCommand } = process.env
-          const projects = JSON.parse(PROJECTS)
-          console.log("Build Command:", buildCommand)
-
-          /* const affectedProjects = JSON.parse(AFFECTED_PROJECTS)
-          let visitedNodes = {}
-
-          const isParentChanged = (targetNode, node) => {
-            if(targetNode === node) {
-              return true
-            }
-            if(node) {
-              visitedNodes[node] = true
-            }
-
-            let children = !!node ? [] : affectedProjects.projects
-            if (node && node.length && affectedProjects.projectGraph.dependencies[node]) {
-              children = affectedProjects.projectGraph.dependencies[node] || []
-              children = children.map((project) => project.target)
-            }
-
-            for(let i = 0; i < children.length; i++) {
-              if(!visitedNodes[children[i]] && isParentChanged(targetNode, children[i])) {
-                return true
-              }
-            }
-            
-            return false
-          }
+          const { PROJECTS, AFFECTED_PROJECTS } = process.env
+          const projectsJson = JSON.parse(PROJECTS)
+          const affectedProjects = AFFECTED_PROJECTS.split(',').map((project) => project.trim())
+          console.log("Affected String:", affectedProjects)
 
           const getAffectedProjects = (projects) => {
-            return projects.filter((project) => {
-              const found = !!affectedProjects.projects.find((affectedProject) => affectedProject === project.projectName)
-              return found || (project.checkParentChange && isParentChanged(project.projectName))
-            })
+            console.log("Projects:", projects)
+            return projects.filter((project) => !!affectedProjects.find((affectedProject) => affectedProject === project.projectName))
           }
 
           const affected = {}
-          Object.entries(projects).forEach(([key, value]) => {
+          Object.entries(projectsJson).forEach(([key, value]) => {
               const projectsArray = getAffectedProjects(value)
               if(projectsArray.length) {
-                affected[key] = projectsArray.map((project) => project.projectName)
+                affected[key] = projectsArray
               }
-          }) */
-
-          return JSON.stringify({})
+          })
+          console.log("Affected Projects:", affected)
+          return JSON.stringify(affected)
         result-encoding: string
