--- a/.github/workflows/build-without-cache.yml
+++ b/.github/workflows/build-without-cache.yml
@@ -28,7 +28,7 @@ jobs:
               "backendProjects": [{ "projectName": "crm-app-api" }, 
                                   { "projectName": "edgetag-app-api" }],
               "dockerProjects": [{ "projectName": "cloud-app-ui" }],
-              "storybookProjects": [{ "projectName": "ui-kit" }]
+              "storybookProjects": [{ "projectName": "ui-kit", "buildCommand": "build-storybook", "configuration": "ci" }]
             }
 
       - name: Output projects
@@ -45,43 +45,55 @@ jobs:
         shell: bash
         run: echo "Just dummy step"
 
-  # proj1:
-  #   runs-on: ubuntu-latest
-  #   needs: [preparation, lint]
-  #   if: ${{ fromJSON(needs.preparation.outputs.affected-projects).proj1 != null }}
-  #   strategy:
-  #     matrix:
-  #       target: ${{ fromJSON(needs.preparation.outputs.affected-projects).proj1 }}
+  storybookProjects:
+    runs-on: ubuntu-latest
+    needs: [preparation, lint]
+    if: ${{ fromJSON(needs.preparation.outputs.affected-projects).storybookProjects != null }}
+    strategy:
+      matrix:
+        target: ${{ fromJSON(needs.preparation.outputs.affected-projects).storybookProjects }}
 
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
-  #     # - name: Set up Docker Buildx
-  #     #   uses: docker/setup-buildx-action@v1
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v1
 
-  #     - name: echo state value
-  #       shell: bash
-  #       run: echo ${{ matrix.target }}
+      - name: echo state value
+        shell: bash
+        run: echo ${{ matrix.target.projectName }}
 
-  # proj2:
-  #   runs-on: ubuntu-latest
-  #   needs: [preparation, lint]
-  #   if: ${{ fromJSON(needs.preparation.outputs.affected-projects).proj2 != null }}
-  #   strategy:
-  #     matrix:
-  #       target: ${{ fromJSON(needs.preparation.outputs.affected-projects).proj2 }}
+      - name: echo state value
+        shell: bash
+        run: echo $buildCommand
+        env:
+          buildCommand: ${{ matrix.target && matrix.target.buildCommand || 'build' }}
 
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
+  frontendProjects:
+    runs-on: ubuntu-latest
+    needs: [preparation, lint]
+    if: ${{ fromJSON(needs.preparation.outputs.affected-projects).frontendProjects != null }}
+    strategy:
+      matrix:
+        target: ${{ fromJSON(needs.preparation.outputs.affected-projects).frontendProjects }}
 
-  #     # - name: Set up Docker Buildx
-  #     #   uses: docker/setup-buildx-action@v1
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
-  #     - name: echo state value
-  #       shell: bash
-  #       run: echo ${{ matrix.target }}
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v1
+
+      - name: echo state value
+        shell: bash
+        run: echo ${{ matrix.target.projectName }}
+
+      - name: echo state value
+        uses: ./.github/actions/frontend
+        with:
+          app: ${{ matrix.target.projectName }}
+          appJson: ${{ toJSON(matrix.target) }}
 
   # proj3:
   #   runs-on: ubuntu-latest
