--- a/.github/actions/preparation/action.yml
+++ b/.github/actions/preparation/action.yml
@@ -14,13 +14,22 @@ runs:
   using: 'composite'
   steps:
     - name: Checkout PR
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
+        fetch-depth: 0
         ref: ${{ github.event.pull_request.head.sha }}
 
-    - name: Github Sha
+    - name: Derive appropriate SHAs for base and head for `nx affected` commands
+      uses: nrwl/nx-set-shas@v3
+
+    - name: Nx SHAs
       shell: bash
-      run: echo '${{ github.event.pull_request.head.sha }}'
+      run: |
+        echo "BASE: ${{ env.NX_BASE }}"
+        echo "HEAD: ${{ env.NX_HEAD }}"
+      env:
+        base: ${{ env.NX_BASE }}
+        head: ${{ env.NX_HEAD }}
 
     - name: Nx affected projects
       id: affected
