--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -19,6 +19,9 @@ jobs:
       affected-projects: ${{ steps.preparation.outputs.affected-projects }}
 
     steps:
+      - name: Checkout PR
+        uses: actions/checkout@v3
+
       - name: github Sha
         shell: bash
         run: echo $GITHUB_REF
